[package]
name = "pico-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-futures = { version = "^0.1.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-futures" }
embassy-sync = { version = "^0.1.0", features = [
    "defmt",
], git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync" }
embassy-executor = { version = "^0.1.0", features = [
    "defmt",
    "integrated-timers",
], git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor" }
embassy-time = { version = "^0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
], git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time" }
embassy-rp = { version = "^0.1.0", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "pio",
    "critical-section-impl",
], git = "https://github.com/embassy-rs/embassy.git", package = "embassy-rp" }

defmt = "^0.3"
defmt-rtt = "^0.4"

cortex-m = { version = "^0.7.6" }
cortex-m-rt = "^0.7.0"
alloc-cortex-m = "^0.4.3"
panic-probe = { version = "^0.3", features = ["print-defmt"] }
futures = { version = "^0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }

serde = { version = "^1.0.151", default-features = false, features = ["alloc"] }
byte-slice-cast = { version = "^1.2.0", default-features = false }

embedded-hal = "^1.0.0-alpha.9"
embedded-hal-async = "^0.2.0-alpha.0"
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
static_cell = "^1.0.0"
log = "^0.4"
pio-proc = "^0.2"
pio = "^0.2"

[patch.crates-io]
pio = { git = "https://github.com/rp-rs/pio-rs.git" }
